--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </label>
                 <label>
                     Sua senha: <br>
-                    <input type="password" name="password" data-rules="required|min=4>"
+                    <input type="password" name="password" data-rules="required|senha">
                 </label>
                 <label>
                     <input type="submit" value="Cadastrar">
